tests-extra/invalid/reborrow_dependent_cyclic.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/reborrow_dependent_cyclic.rs:19:5
   |
19 |       x.with_dependent(|_, dep| {
   |       ^ borrowed value does not live long enough
   |  _____|
   | |
20 | |         dep.0.borrow_mut().0 = Some(dep);
21 | |     });
   | |______- argument requires that `x` is borrowed for `'static`
...
34 |   }
   |   - `x` dropped here while still borrowed

error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/reborrow_dependent_cyclic.rs:23:5
   |
19 |       x.with_dependent(|_, dep| {
   |       - immutable borrow occurs here
   |  _____|
   | |
20 | |         dep.0.borrow_mut().0 = Some(dep);
21 | |     });
   | |______- argument requires that `x` is borrowed for `'static`
22 |
23 | /     x.with_dependent_mut(|_, dep| {
24 | |         let r1 = dep.0.get_mut();
25 | |         let string_ref_1 = &mut r1.1;
26 | |         let mut r2 = r1.0.unwrap().0.borrow_mut();
...  |
32 | |         println!("{}", s); // prints garbage
33 | |     });
   | |______^ mutable borrow occurs here
